Actualizacion de inner join ya funcionales

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,8 +30,22 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.all-themes-1.0.10.jar=jar\\all-themes-1.0.10.jar
+file.reference.commons-beanutils-1.8.2.jar=jar\\commons-beanutils-1.8.2.jar
+file.reference.commons-collections-3.2.1.jar=jar\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=jar\\commons-digester-2.1.jar
+file.reference.commons-javaflow-20060411.jar=jar\\commons-javaflow-20060411.jar
+file.reference.commons-logging-1.1.1.jar=jar\\commons-logging-1.1.1.jar
 file.reference.dot-luv-1.0.10.jar=jar/dot-luv-1.0.10.jar
+file.reference.groovy-all-1.7.5.jar=jar\\groovy-all-1.7.5.jar
+file.reference.iText-2.1.7.jar=jar\\iText-2.1.7.jar
+file.reference.itext-pdfa-5.5.4.jar=jar\\itext-pdfa-5.5.4.jar
+file.reference.itextpdf-5.5.4.jar=jar\\itextpdf-5.5.4.jar
+file.reference.jasperreports-4.7.1.jar=jar\\jasperreports-4.7.1.jar
+file.reference.jasperreports-javaflow-4.7.1.jar=jar\\jasperreports-javaflow-4.7.1.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=jar/mysql-connector-java-5.1.23-bin.jar
+file.reference.png-encoder-1.5.jar=jar\\png-encoder-1.5.jar
+file.reference.poi-3.7.jar=jar\\poi-3.7.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -49,7 +63,21 @@ javac.classpath=\
     ${libs.primefaces.classpath}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${file.reference.dot-luv-1.0.10.jar}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.all-themes-1.0.10.jar}:\
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.groovy-all-1.7.5.jar}:\
+    ${file.reference.iText-2.1.7.jar}:\
+    ${file.reference.itext-pdfa-5.5.4.jar}:\
+    ${file.reference.itextpdf-5.5.4.jar}:\
+    ${file.reference.jasperreports-4.7.1.jar}:\
+    ${file.reference.jasperreports-javaflow-4.7.1.jar}:\
+    ${file.reference.png-encoder-1.5.jar}:\
+    ${file.reference.poi-3.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
