agregacion de reporte de cuentas

--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -2,6 +2,19 @@ libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
 libs.CopyLibs.displayName=Tarea CopyLibs
 libs.CopyLibs.prop-version=2.0
+libs.iReport5.5.classpath=\
+    ${base}/iReport5.5/commons-beanutils-1.8.2.jar:\
+    ${base}/iReport5.5/commons-collections-3.2.1.jar:\
+    ${base}/iReport5.5/commons-digester-2.1.jar:\
+    ${base}/iReport5.5/commons-javaflow-20060411.jar:\
+    ${base}/iReport5.5/commons-logging-1.1.jar:\
+    ${base}/iReport5.5/groovy-all-2.0.1.jar:\
+    ${base}/iReport5.5/iText-2.1.7.js2.jar:\
+    ${base}/iReport5.5/jasperreports-5.5.0.jar:\
+    ${base}/iReport5.5/jasperreports-fonts-5.5.0.jar:\
+    ${base}/iReport5.5/png-encoder-1.5.jar:\
+    ${base}/iReport5.5/poi-3.7-20101029.jar
+libs.iReport5.5.displayName=iReport5.5
 libs.javaee-endorsed-api-7.0.classpath=\
     ${base}/javaee-endorsed-api-7.0/javax.annotation-api.jar;\
     ${base}/javaee-endorsed-api-7.0/javax.xml.soap-api.jar;\
